--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,9 @@
     <title>TFG</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css"/>
+    
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -18,16 +21,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/"><i class="fa-solid fa-briefcase"></i>   Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/users">Users</a>
+                <a class="nav-link" href="/users"><i class="fa-solid fa-users"></i>   Users</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/languages">Languages</a>
+                <a class="nav-link" href="/languages"><i class="fa-solid fa-language"></i>   Languages</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/rooms">Rooms</a>
+                <a class="nav-link" href="/rooms"><i class="fa-solid fa-house"></i>   Rooms</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
