--- a/views/languages/index.ejs
+++ b/views/languages/index.ejs
@@ -1,93 +1,152 @@
 <!-- views/languages/index.ejs -->
 
-<!-- TABLE: List of languages -->
-<div class="card">
-    <div class="card-header">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">List of languages</h2>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered table-sm">
-                
-                <thead class="thead-dark">
-                    <tr>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language from</th>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language to</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Total of interpreters</th>
-                    </tr>
-                </thead>
-                
-                <tbody>
-                    <% languages.forEach(language => { %>
-                        <tr>
-                            <td style="text-align: center;"><%= language.id %></td>
-                            <td><%= language.language_from %></td>
-                            <td><%= language.language_to %></td>
-                            <td style="text-align: center;">
-                                <% if (language.interpreters.length > 0) { %>
-                                    <span><%= language.interpreters.length %></span>
-                                <% } else { %>
-                                    <span>None</span>
-                                <% } %>
-                            </td>
-                        </tr>
-                    <% }); %>
-                </tbody>
-                
-            </table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index languages</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-            <div>
-                <a href="/languages/new" class="btn btn-success btn-sm">New Language</a>
-            </div>
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            text-align: center;
+        }
 
+        .details h4 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 10px 10px;
+        }
+        
+        .thead th {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #4a4a4a;
+            color: #fff;
+            vertical-align: middle;
+            text-align: center;
+            padding: 5px;
+            border: none;
+        }
+        .table td {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            letter-spacing: 0.6px;
+            text-align: center;
+            border-top: 2px solid #eeeeee;
+            border-bottom: 2px solid #eeeeee;
+            border-left: none;
+            border-right: none;
+        }
+        .table {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+    </style>
+
+</head>
+<body>
+
+    <!-- TABLE: List of languages -->
+    <div class="card">
+        <div class="card-header profile-header">
+            <h2>List of languages</h2>
         </div>
-    </div>
-</div>
-
-<br>
-<br>
-
-
-<!-- TABLE: List of interpreters -->
-<div class="card">
-    <div class="card-header">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">List of interpreters</h2>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered table-sm">
-                
-                <thead class="thead-dark">
-                    <tr>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language ID</th>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language from</th>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language to</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Interpreter ID</th>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Interpreter</th>
-                    </tr>
-                </thead>
-                
-                <tbody>
-                    <% languages.forEach(language => { %>
-                        <% language.interpreters.forEach(interpreter => { %>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered table-sm">
+                    
+                    <thead class="thead">
+                        <tr>
+                            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
+                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language from</th>
+                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language to</th>
+                            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Total of interpreters</th>
+                        </tr>
+                    </thead>
+                    
+                    <tbody>
+                        <% languages.forEach(language => { %>
                             <tr>
                                 <td style="text-align: center;"><%= language.id %></td>
                                 <td><%= language.language_from %></td>
                                 <td><%= language.language_to %></td>
-                                <td style="text-align: center;"><%= interpreter.id %></td>
-                                <td><a href="/users/<%= interpreter.id %>/profile" style="color: blue;"><%= interpreter.User.username %></a></td>
+                                <td style="text-align: center;">
+                                    <% if (language.interpreters.length > 0) { %>
+                                        <span><%= language.interpreters.length %></span>
+                                    <% } else { %>
+                                        <span>None</span>
+                                    <% } %>
+                                </td>
                             </tr>
                         <% }); %>
-                    <% }); %>
-                </tbody>
-                
-            </table>
+                    </tbody>
+                    
+                </table>
 
-            <div>
-                <a href="/languages/new" class="btn btn-success btn-sm">New Language</a>
+                <div>
+                    <a href="/languages/new" class="btn btn-success btn-sm"><i class="fa-solid fa-plus"></i>   New Language</a>
+                </div>
+
             </div>
-
         </div>
     </div>
-</div>
+
+    <br>
+    <br>
+
+
+    <!-- TABLE: List of interpreters -->
+    <div class="card">
+        <div class="card-header profile-header">
+            <h2>List of interpreters</h2>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered table-sm">
+                    
+                    <thead class="thead">
+                        <tr>
+                            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language ID</th>
+                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language from</th>
+                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language to</th>
+                            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Interpreter ID</th>
+                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Interpreter</th>
+                        </tr>
+                    </thead>
+                    
+                    <tbody>
+                        <% languages.forEach(language => { %>
+                            <% language.interpreters.forEach(interpreter => { %>
+                                <tr>
+                                    <td style="text-align: center;"><%= language.id %></td>
+                                    <td><%= language.language_from %></td>
+                                    <td><%= language.language_to %></td>
+                                    <td style="text-align: center;"><%= interpreter.id %></td>
+                                    <td><a href="/users/<%= interpreter.id %>/profile" style="color: blue;"><%= interpreter.User.username %></a></td>
+                                </tr>
+                            <% }); %>
+                        <% }); %>
+                    </tbody>
+                    
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <br>
+</body>
+</html>
