--- a/views/rooms/booths/edit.ejs
+++ b/views/rooms/booths/edit.ejs
@@ -6,11 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Booth</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"><!-- Font Awesome Icons -->
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #002e6b;
+            border-radius: 10px;
+        }
+        
+        .form-group {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 5px;
+        }
+
+    </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Edit Booth</h2>
+        <div class="profile-header">
+            <h2>Edit Booth</h2>
+        </div>
 
         <br>      
 
@@ -46,10 +71,12 @@
                     <% }); %>
                 </select>
             </div>
-            <div class="card-header" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a;  letter-spacing: 1px;">
+            <div class="card-header" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a;  letter-spacing: 1px; background-color: #ffd4d4;">
                 <b>IMPORTANT!</b> If you modify the language to, all interpreters assigned to this booth will be deleted.
             </div>
-                    
+            
+            <br>
+
             <!-- Signs (Boolean) -->
             <div class="form-group">
                 <label for="signs">Signs:</label>
@@ -88,11 +115,10 @@
 
             <br>
             
-            <!-- Botón para guardar cambios -->
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-
-            <!-- Botón para ir atrás -->
-            <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
+            <div class="form-group" style="text-align: center;">
+                <button type="submit" class="btn btn-primary">Save Changes</button>
+                <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
+            </div>
             
         </form>
         <br>
