--- a/views/rooms/booths/selectInterpreter.ejs
+++ b/views/rooms/booths/selectInterpreter.ejs
@@ -8,6 +8,63 @@
     <title>Select Interpreter</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .profile-header {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #fff;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #4a4a4a;
+            border-radius: 10px;
+        }
+
+        .details h4 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 10px 10px;
+        }
+        
+        .form-group {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 5px;
+        }
+        .form-group p {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 5px;
+        }
+        .thead th {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #4a4a4a;
+            color: #fff;
+            vertical-align: middle;
+            text-align: center;
+            padding: 10px;
+        }
+        .table td {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            letter-spacing: 0.6px;
+            text-align: center;
+            border-top: 2px solid #eeeeee;
+            border-bottom: 2px solid #eeeeee;
+            border-left: none;
+            border-right: none;
+        }
+        .table {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+    </style>
 </head>
 
 <!-- Modal Select -->
@@ -59,40 +116,40 @@
     </div>
 </div>
 
+<div class="profile-header">
+    <h3 class="card-title text-center">ROOM <%= room.id %>: <%= room.name %></h3>
+    <h4 class="card-title text-center">BOOTH <%= booth.id %>: <%= booth.language %> to <%= booth.language_a %></h4>
+</div>
 
-<h3 class="card-title text-center" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">ROOM <%= room.id %>: <%= room.name %></h3>
-<h4 class="card-title text-center" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">BOOTH <%= booth.id %>: <%= booth.language %> to <%= booth.language_a %></h4>
-
-<br>
-
-<br>
 
 <!-- Tabla de interpretes actuales -->
 <% if (Array.isArray(currentInterpreters) && currentInterpreters.length > 0) { %>
 
-    <h5 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">CURRENT INTERPRETERS</h5>
+    <div class="details">
+        <h4>CURRENT INTERPRETERS</h4>
+    </div>
 
     <table class="table mt-3">
 
-        <thead class="thead-dark">
+        <thead class="thead">
             <tr>
-                <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-                <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
-                <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
-                <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Reputation</th>
-                <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Actions</th>
+                <th>ID</th>
+                <th>Username</th>
+                <th>Email</th>
+                <th>Reputation</th>
+                <th>Delete</th>
             </tr>
         </thead>
 
         <% currentInterpreters.forEach(function(currentInterpreter) { %>
             <tbody>
                 <tr>
-                    <td style="text-align: center;"><%= currentInterpreter.id %></td>
+                    <td><%= currentInterpreter.id %></td>
                     <td><%= currentInterpreter.User.username %></td>
                     <td><%= currentInterpreter.User.email %></td>
-                    <td style="text-align: center;"><%= currentInterpreter.reputation.value %></td>
-                    <td style="text-align: center;">
-                        <button type="button" class="btn btn-danger btn-sm deleteButton" data-toggle="modal" data-target="#confirmDeleteModal" data-interpreter-id="<%= currentInterpreter.id %>">Delete</button>
+                    <td><%= currentInterpreter.reputation.value %></td>
+                    <td>
+                        <button type="button" class="btn btn-danger btn-sm deleteButton" data-toggle="modal" data-target="#confirmDeleteModal" data-interpreter-id="<%= currentInterpreter.id %>"><i class="fa-solid fa-trash-can"></i></button>
                     </td>
                 </tr>
             </tbody>
@@ -100,38 +157,37 @@
 
     </table>
     <hr class="my-4">
-    <br>
 <% } %>
-
-    
-
 
 <!-- Tabla de todos los interpreters -->
 <% if (Array.isArray(possibleInterpreters) && possibleInterpreters.length > 0) { %>
-    <h5 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">ALL INTERPRETERS</h5>
+    
+    <div class="details">
+        <h4>ALL INTERPRETERS</h4>
+    </div>
 
     <table class="table mt-3">
 
-        <thead class="thead-dark">
+        <thead class="thead">
             <tr>
-                <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-                <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
-                <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
-                <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Reputation</th>
-                <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Choose</th>
+                <th>ID</th>
+                <th>Username</th>
+                <th>Email</th>
+                <th>Reputation</th>
+                <th>Choose</th>
             </tr>
         </thead>
 
         <tbody>
             <% possibleInterpreters.forEach(function(interpreter) { %>
                 <tr <% if (Array.isArray(currentInterpreters) && currentInterpreters.some(current => current.id === interpreter.id)) { %> style="background-color: #f0f0f0;" <% } %>>
-                    <td style="text-align: center;"><%= interpreter.id %></td>
+                    <td><%= interpreter.id %></td>
                     <td><%= interpreter.User.username %></td>
                     <td><%= interpreter.User.email %></td>
-                    <td style="text-align: center;"><%= interpreter.reputation.value %></td>
-                    <td style="text-align: center;">
+                    <td><%= interpreter.reputation.value %></td>
+                    <td>
                         <% if (!(Array.isArray(currentInterpreters) && currentInterpreters.some(current => current.id === interpreter.id))) { %>
-                            <button type="button" class="btn btn-primary btn-sm selectButton" data-toggle="modal" data-target="#confirmModal">Select</button>
+                            <button type="button" class="btn btn-primary btn-sm selectButton" data-toggle="modal" data-target="#confirmModal"><i class="fa-solid fa-user-plus"></i></button>
                         <% } %>
                     </td>
                 </tr>
@@ -158,7 +214,7 @@
 
 <!-- Botón para ir atrás -->
 <div class="text-center">
-    <a href="/rooms/<%= room.id %>" class="btn btn-outline-dark">Back</a>
+    <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Back</a>
 </div>
 
 <br>
