--- a/views/rooms/edit.ejs
+++ b/views/rooms/edit.ejs
@@ -7,12 +7,36 @@
     <title>Edit Room</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #002e6b;
+            border-radius: 10px;
+        }
+        
+        .form-group {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 5px;
+        }
+
+    </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Edit Room</h2>
-
-        <br>      
+        <div class="profile-header">
+            <h2>Edit Room</h2>
+        </div>
+        <br>
 
         <form method="post" action="/rooms/<%= room.id %>?_method=PUT">          
             
@@ -66,7 +90,7 @@
                             <% }); %>
                         </select>
                     </div>
-                    <div class="card-header" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a;  letter-spacing: 1px;">
+                    <div class="card-header" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a;  letter-spacing: 1px; background-color: #ffd4d4;">
                         <b>IMPORTANT!</b> If you modify the language, the booths assigned to this room will be modified, changing their source language and eliminating all the interpreters assigned to them.
                     </div>
 
@@ -158,14 +182,12 @@
                 <input type="text" class="form-control" id="assigned_vrc" name="assigned_vrc" value="<%= room.assigned_vrc %>">
             </div>
 
-
             <br>
-            
-            <!-- Botón para guardar cambios -->
-            <button type="submit" class="btn btn-primary">Save Changes</button>
 
-            <!-- Botón para ir atrás -->
-            <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
+            <div class="form-group" style="text-align: center;">
+                <button type="submit" class="btn btn-primary">Save Changes</button>
+                <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
+            </div>
             
         </form>
         <br>
