--- a/views/rooms/new.ejs
+++ b/views/rooms/new.ejs
@@ -7,10 +7,36 @@
     <title>Create New Room</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #0e6b00;
+            border-radius: 10px;
+        }
+        
+        .form-group {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 5px;
+        }
+
+    </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Create New Room</h2>
+        <div class="profile-header">
+            <h2>Create New Room</h2>
+        </div>
+        
         <form action="/rooms" method="POST">
             <br>
 
@@ -70,8 +96,6 @@
                     <% } %>
                 </select>
             </div>
-            
-            <br>
 
             <!-- Place (String) -->
             <div class="form-group">
@@ -136,11 +160,10 @@
 
             <br>
 
-            <!-- Botón para crear room -->
-            <button type="submit" class="btn btn-primary">Create Room</button>
-
-            <!-- Botón para volver atrás -->
-            <a href="/rooms" class="btn btn-outline-dark">Cancel</a>
+            <div class="form-group" style="text-align: center;">
+                <button type="submit" class="btn btn-success">Create Room</button>
+                <a href="/rooms" class="btn btn-outline-dark">Cancel</a>
+            </div>
 
         </form>
     </div>
