--- a/views/rooms/selectTechnician.ejs
+++ b/views/rooms/selectTechnician.ejs
@@ -8,6 +8,63 @@
     <title>Select Technician</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .profile-header {
+            font-family: Georgia, serif;
+            color: #fff;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #4a4a4a;
+            border-radius: 10px;
+        }
+
+        .details h4 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 10px 10px;
+        }
+        
+        .form-group {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 5px;
+        }
+        .form-group p {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 5px;
+        }
+        .thead th {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #4a4a4a;
+            color: #fff;
+            vertical-align: middle;
+            text-align: center;
+            padding: 10px;
+        }
+        .table td {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            letter-spacing: 0.6px;
+            text-align: center;
+            border-top: 2px solid #eeeeee;
+            border-bottom: 2px solid #eeeeee;
+            border-left: none;
+            border-right: none;
+        }
+        .table {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+    </style>
 </head>
 
 <form method="post" action="/rooms/<%= room.id %>/selectTechnician?_method=PUT"> 
@@ -36,30 +93,34 @@
     </div>
 </div>
 
-<h3 class="card-title text-center" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">ROOM <%= room.id %>: <%= room.name %></h3>
+<div class="profile-header">
+    <h3 class="card-title text-center">ROOM <%= room.id %>: <%= room.name %></h3>
+</div>
 
 <br>
 
 
-<!-- Tabla de consultor actual -->
+<!-- Tabla de tecnico actual -->
 <% if (currentTechnician) { %>
 
-    <h5 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">CURRENT CONSULTANT</h5>
+    <div class="details">
+        <h4>CURRENT TECHNICIAN</h4>
+    </div>
 
     <table class="table mt-3">
 
-        <thead class="thead-dark">
+        <thead class="thead">
             <tr>
-                <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-                <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
-                <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
+                <th>ID</th>
+                <th>Username</th>
+                <th>Email</th>
             </tr>
         </thead>
 
         <tbody>
         
             <tr>
-                <td style="text-align: center;"><%= currentTechnician.id %></td>
+                <td><%= currentTechnician.id %></td>
                 <td><%= currentTechnician.User.username %></td>
                 <td><%= currentTechnician.User.email %></td>
             </tr>
@@ -67,33 +128,34 @@
 
     </table>
     <hr class="my-4">
-    <br>
 <% } %>
     
 
 
-<!-- Tabla de todos los consultores -->
+<!-- Tabla de todos los tecnicos -->
 
-<h5 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">ALL CONSULTANTS</h5>
+<div class="details">
+    <h4>ALL TECHNICIANS</h4>
+</div>
 
 <table class="table mt-3">
 
-    <thead class="thead-dark">
+    <thead class="thead">
         <tr>
-            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
-            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
-            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Choose</th>
+            <th>ID</th>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Choose</th>
         </tr>
     </thead>
 
     <tbody>
         <% allTechnicians.forEach(function(technician) { %>
             <tr <% if (currentTechnician && technician.id === currentTechnician.id) { %> style="background-color: #f0f0f0;" <% } %>>
-                <td style="text-align: center;"><%= technician.id %></td>
+                <td><%= technician.id %></td>
                 <td><%= technician.User.username %></td>
                 <td><%= technician.User.email %></td>
-                <td style="text-align: center;">
+                <td>
                     <% if (!(currentTechnician && technician.id === currentTechnician.id)) { %>
                         <button type="button" class="btn btn-primary btn-sm selectButton" data-toggle="modal" data-target="#confirmModal">Select</button>
                     <% } %>
