--- a/views/rooms/votes/edit.ejs
+++ b/views/rooms/votes/edit.ejs
@@ -8,7 +8,56 @@
     <title>Votes</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #4a4a4a;
+            border-radius: 10px;
+        }
+
+        .details h4 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 10px 10px;
+        }
+        
+        .thead th {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #4a4a4a;
+            color: #fff;
+            vertical-align: middle;
+            text-align: center;
+            padding: 10px;
+        }
+
+        .table td {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            letter-spacing: 0.6px;
+            text-align: center;
+            border: 2px solid #fff;
+        }
+        .table {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .table tbody tr:nth-of-type(even) {
+            background-color: #f9f9f9;
+        }
+
         .star-rating {
             font-size: 150%;
             cursor: pointer;
@@ -33,35 +82,36 @@
 <body>
     <div class="container mt-5">
         
-        <div class="d-flex justify-content-between align-items-center" id="roomHeader<%= room.id %>">
-            <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; width: 80%;">VOTES</h2>
+        <div class="profile-header">
+            <h2>Voting</h2>
         </div>
         <form method="post" action="/rooms/<%= room.id %>/votes?_method=PUT">
         <hr class="my-4">        
-        
-        <h5 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">Room <%= room.id %>: <%= room.name %></h5>
-            
+        <div class="details">
+            <h4>Room <%= room.id %>: <%= room.name %></h4>
+        </div>
+           
         <!-- Tabla participantes -->
 
         <form method="post" action="/rooms/<%= room.id %>/votes?_method=PUT"> 
             <table class="table mt-3">
-                <thead class="thead-dark">
+                <thead class="thead">
                     <tr>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Role</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Vote</th>
+                        <th>Role</th>
+                        <th>ID</th>
+                        <th>Username</th>
+                        <th>Email</th>
+                        <th>Vote</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>Coordinator</td>
                         <% if (room.coordinatorOfRoom) { %>
-                            <td style="text-align: center"><%= room.coordinatorOfRoom.id %></td>
+                            <td><%= room.coordinatorOfRoom.id %></td>
                             <td><%= room.coordinatorOfRoom.User.username %></td>
                             <td><%= room.coordinatorOfRoom.User.email %></td>
-                            <td style="text-align: center">
+                            <td>
                                 <div class="star-rating">
                                     <input type="radio" id="coordinatorNone" name="coordinatorLike" value="0" <% if (!likeOfCoordinator || likeOfCoordinator.value === 0) { %> checked <% } %>>
                                     <label for="coordinatorNone">•</label>
@@ -82,10 +132,10 @@
                     <tr>
                         <td>Operator</td>
                         <% if (room.operatorOfRoom) { %>
-                            <td style="text-align: center"><%= room.operatorOfRoom.id %></td>
+                            <td><%= room.operatorOfRoom.id %></td>
                             <td><%= room.operatorOfRoom.User.username %></td>
                             <td><%= room.operatorOfRoom.User.email %></td>
-                            <td style="text-align: center">
+                            <td>
                                 <div class="star-rating">
                                     <input type="radio" id="operatorNone" name="operatorLike" value="0" <% if (!likeOfOperator || likeOfOperator.value === 0) { %> checked <% } %>>
                                     <label for="operatorNone">•</label>
@@ -106,10 +156,10 @@
                     <tr>
                         <td>Technician</td>
                         <% if (room.technicianOfRoom) { %>
-                            <td style="text-align: center"><%= room.technicianOfRoom.id %></td>
+                            <td><%= room.technicianOfRoom.id %></td>
                             <td><%= room.technicianOfRoom.User.username %></td>
                             <td><%= room.technicianOfRoom.User.email %></td>
-                            <td style="text-align: center">
+                            <td>
                                 <div class="star-rating">
                                     <input type="radio" id="technicianNone" name="technicianLike" value="0" <% if (!likeOfTechnician || likeOfTechnician.value === 0) { %> checked <% } %>>
                                     <label for="technicianNone">•</label>
@@ -131,10 +181,10 @@
                     <% interpreterLikes.forEach((item, index) => { %>
                         <tr>
                             <td>Interpreter</td>
-                            <td style="text-align: center"><%= item.interpreter.id %></td>
+                            <td><%= item.interpreter.id %></td>
                             <td><%= item.interpreter.User.username %></td>
                             <td><%= item.interpreter.User.email %></td>
-                            <td style="text-align: center">
+                            <td>
                                 <div class="star-rating">
                                     <input type="radio" id="interpreterNone_<%= item.interpreter.id %>" name="interpreterLike_<%= item.interpreter.id %>" value="0" <% if (!item.like || item.like.value === 0) { %> checked <% } %>>
                                     <label for="interpreterNone_<%= item.interpreter.id %>">•</label>
