--- a/views/rooms/votes/index.ejs
+++ b/views/rooms/votes/index.ejs
@@ -8,65 +8,120 @@
     <title>Votes</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #4a4a4a;
+            border-radius: 10px;
+        }
+
+        .details h4 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 10px 10px;
+        }
+        
+        .thead th {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #4a4a4a;
+            color: #fff;
+            vertical-align: middle;
+            text-align: center;
+            padding: 10px;
+        }
+
+        .table td {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            letter-spacing: 0.6px;
+            text-align: center;
+            border: 2px solid #fff;
+        }
+        .table {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .table tbody tr:nth-of-type(even) {
+            background-color: #f9f9f9;
+        }
+
+    </style>
+
 </head>
 <body>
     <div class="container mt-5">
         
-        <div class="d-flex justify-content-between align-items-center" id="roomHeader<%= room.id %>">
-            <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px; width: 80%;">VOTES</h2>
+        <div class="profile-header">
+            <h2>VOTES</h2>
         </div>
         <hr class="my-4">        
         
-        <h5 class="card-title" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">Room <%= room.id %>: <%= room.name %></h5>
+        <div class="details">
+            <h4>Room <%= room.id %>: <%= room.name %></h4>
+        </div>
+        
             
         <!-- Tabla participantes -->
 
         <table class="table mt-3">
-            <thead class="thead-dark">
+            <thead class="thead">
                 <tr>
-                    <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Role</th>
-                    <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-                    <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
-                    <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
-                    <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Vote</th>
+                    <th>Role</th>
+                    <th>ID</th>
+                    <th>Username</th>
+                    <th>Email</th>
+                    <th>Vote</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Coordinator</td>
                     <% if (room.coordinatorOfRoom) { %>
-                        <td style="text-align: center"><%= room.coordinatorOfRoom.id %></td>
+                        <td><%= room.coordinatorOfRoom.id %></td>
                         <td><%= room.coordinatorOfRoom.User.username %></td>
                         <td><%= room.coordinatorOfRoom.User.email %></td>
-                        <td style="text-align: center"><%= likeOfCoordinator ? likeOfCoordinator.value : '-' %></td>
+                        <td><%= likeOfCoordinator ? likeOfCoordinator.value : '-' %></td>
                     <% } %>
                 </tr>
                 <tr>
                     <td>Operator</td>
                     <% if (room.operatorOfRoom) { %>
-                        <td style="text-align: center"><%= room.operatorOfRoom.id %></td>
+                        <td><%= room.operatorOfRoom.id %></td>
                         <td><%= room.operatorOfRoom.User.username %></td>
                         <td><%= room.operatorOfRoom.User.email %></td>
-                        <td style="text-align: center"><%= likeOfOperator ? likeOfOperator.value : '-' %></td>
+                        <td><%= likeOfOperator ? likeOfOperator.value : '-' %></td>
                     <% } %>
                 </tr>
                 <tr>
                     <td>Technician</td>
                     <% if (room.technicianOfRoom) { %>
-                        <td style="text-align: center"><%= room.technicianOfRoom.id %></td>
+                        <td><%= room.technicianOfRoom.id %></td>
                         <td><%= room.technicianOfRoom.User.username %></td>
                         <td><%= room.technicianOfRoom.User.email %></td>
-                        <td style="text-align: center"><%= likeOfTechnician ? likeOfTechnician.value : '-' %></td>
+                        <td><%= likeOfTechnician ? likeOfTechnician.value : '-' %></td>
                     <% } %>
                 </tr>
 
                 <% interpreterLikes.forEach(item => { %>
                     <tr>
                         <td>Interpreter</td>
-                        <td style="text-align: center"><%= item.interpreter.id %></td>
+                        <td><%= item.interpreter.id %></td>
                         <td><%= item.interpreter.User.username %></td>
                         <td><%= item.interpreter.User.email %></td>
-                        <td style="text-align: center"><%= item.like ? item.like.value : '-' %></td>
+                        <td><%= item.like ? item.like.value : '-' %></td>
                     </tr>
                 <% }) %>
                 
@@ -107,8 +162,7 @@
         });
         
     </script>
-
-
+    
 </body>
 </html>
 <br>
