--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -7,10 +7,35 @@
     <title>Edit User</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #002e6b;
+            border-radius: 10px;
+        }
+        
+        .form-group {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 5px;
+        }
+
+    </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Edit User</h2>
+        <div class="profile-header">
+            <h2>Edit User</h2>
+        </div>
 
         <form method="post" action="/users/<%= user.id %>?_method=PUT">
             <div class="form-group">
@@ -18,12 +43,11 @@
                 <label for="id">ID:</label>
                 <input type="text" class="form-control" id="id" name="id" value="<%= user.id %>" readonly>
             </div>
+
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email" name="email" value="<%= user.email %>" readonly>
             </div>
-
-
             
             <div class="form-group">
                 <label for="role">Role:</label>
@@ -86,11 +110,10 @@
                 </div>
             </div>
 
-            <!-- Botón para guardar cambios -->
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-
-            <!-- Botón para ir atrás -->
-            <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
+            <div class="form-group" style="text-align: center;">
+                <button type="submit" class="btn btn-primary">Save Changes</button>
+                <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
+            </div>
             
         </form>
         <br>
