--- a/views/users/editProfile.ejs
+++ b/views/users/editProfile.ejs
@@ -75,7 +75,7 @@
         <!-- Botones -->
         <div class="mt-3">
             <button type="submit" class="btn btn-primary">Save Changes</button>
-            <a href="javascript:history.go(-1)" class="btn btn-secondary">Cancel</a>
+            <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
         </div>
     </div>
 
