--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,99 +1,161 @@
 <!-- views/users/index.ejs -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index users</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-<!-- TABLE: List of users -->
-<div class="card">
-    <div class="card-header">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">List of Users</h2>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive">
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            text-align: center;
+            vertical-align: middle;
+        }
 
-            <!-- Botones para filtrar por rol -->
-            <div class="btn-group d-flex justify-content-center">
-                <a href="/users/consultants" class="btn btn-outline-dark">Consultants</a>
-                <a href="/users/coordinators" class="btn btn-outline-dark">Coordinators</a>
-                <a href="/users/operators" class="btn btn-outline-dark">Operators</a>
-                <a href="/users/technicians" class="btn btn-outline-dark">Technicians</a>
-                <a href="/users/interpreters" class="btn btn-outline-dark">Interpreters</a>
-            </div>  
+        .details h4 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 10px 10px;
+        }
+        
+        .thead th {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #4a4a4a;
+            color: #fff;
+            vertical-align: middle;
+            text-align: center;
+            padding: 5px;
+            border: none;
+        }
+        .table td {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            letter-spacing: 0.6px;
+            text-align: center;
+            border-top: 2px solid #eeeeee;
+            border-bottom: 2px solid #eeeeee;
+            border-left: none;
+            border-right: none;
+            vertical-align: middle;
+        }
+        .table {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
 
-            <br>
+    </style>
 
-            <table class="table table-striped table-bordered table-sm">
-                <thead class="thead-dark">
-                    <tr>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Password Update</th>
-                        <!-- <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Verify Key Email</th> -->
-                        <!-- <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Verify Key Expire</th> -->
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Enabled</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Extra</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IsAdmin</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Admin ID</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Role</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% users.forEach(user => { %>
-                    <tr>
-                        <td style="text-align: center;"><a href="/users/<%= user.id %>" style="color: blue;"><%= user.id %></a></td>
-                        <td><a href="/users/<%= user.id %>/profile" style="color: blue;"><%= user.username %></a></td>
-                        <td><%= user.email %></td>
-                        <td style="text-align: center;"><%= user.passwordUpdate.toLocaleDateString() %> <%= user.passwordUpdate.toLocaleTimeString() %></td>
-                        <!-- <td><%= user.verifyKeyEmail %></td> -->
-                        <!-- <td style="text-align: center;"><%= user.verifyKeyExpire.toLocaleDateString() %> <%= user.verifyKeyExpire.toLocaleTimeString() %></td> -->
-                        <td style="text-align: center;"><%= user.enabled %></td>
-                        <td style="text-align: center;"><%= user.extra %></td>
-                        <td style="text-align: center;">
-                            <% if (user.admin_id) { %>
-                            <span class="badge badge-success">Yes</span>
-                            <% } else { %>
-                            <span class="badge badge-danger">No</span>
-                            <% } %>
-                        </td>
+</head>
+<body>
+        
+    <!-- TABLE: List of users -->
+    <div class="card">
 
-                        <td style="text-align: center;"><%= user.admin_id %></td>
+        <div class="card-header profile-header">
+            <h2>List of Users</h2>
+        </div>
 
-                        <td style="text-align: center;">
-                            <% if (user.clients) { %>
-                                <span>Client</span>
-                            <% } else if (user.consultants) { %>
-                                <span>Consultant</span>
-                            <% } else if (user.coordinators) { %>
-                                <span>Coordinator</span>
-                            <% } else if (user.operators) { %>
-                                <span>Operator</span>
-                            <% } else if (user.technicians) { %>
-                                <span>Technician</span>
-                            <% } else if (user.interpreters) { %>
-                                <span>Interpreter</span>
-                            <% } else { %>
-                                <span>Not defined</span>
-                            <% } %>
-                        </td>
-                        
-                        <td>
-                            <div class="btn-group">
-                                <a href="/users/<%= user.id %>/edit" class="btn btn-outline-dark btn-sm btn-white mr-1">Edit</a>
-                                <a href="/users/<%= user.id %>/delete" class="btn btn-outline-dark btn-sm btn-white">Delete</a>
-                            </div>
-                        </td>
-                    </tr>
-                    <% }); %>
-                </tbody>
-            </table>
-            <!-- BUTTON: new user -->
-            <div class="text-center">
-                <a href="/users/new" class="btn btn-success">New User</a>
+        <div class="card-body">
+            <div class="table-responsive">
+
+                <!-- Botones para filtrar por rol -->
+                <div class="btn-group d-flex justify-content-center">
+                    <a href="/users/consultants" class="btn btn-outline-dark">Consultants</a>
+                    <a href="/users/coordinators" class="btn btn-outline-dark">Coordinators</a>
+                    <a href="/users/operators" class="btn btn-outline-dark">Operators</a>
+                    <a href="/users/technicians" class="btn btn-outline-dark">Technicians</a>
+                    <a href="/users/interpreters" class="btn btn-outline-dark">Interpreters</a>
+                </div>  
+
+                <br>
+
+                <table class="table table-striped table-bordered table-sm">
+                    <thead class="thead">
+                        <tr>
+                            <th>ID</th>
+                            <th>Username</th>
+                            <th>Email</th>
+                            <th>Password Update</th>
+                            <!-- <th>Verify Key Email</th> -->
+                            <!-- <th>Verify Key Expire</th> -->
+                            <th>Enabled</th>
+                            <th>Extra</th>
+                            <th>IsAdmin</th>
+                            <th>Admin ID</th>
+                            <th>Role</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% users.forEach(user => { %>
+                        <tr>
+                            <td><a href="/users/<%= user.id %>" style="color: blue;"><%= user.id %></a></td>
+                            <td><a href="/users/<%= user.id %>/profile" style="color: blue;"><%= user.username %></a></td>
+                            <td><%= user.email %></td>
+                            <td><%= user.passwordUpdate.toLocaleDateString() %> <%= user.passwordUpdate.toLocaleTimeString() %></td>
+                            <!-- <td><%= user.verifyKeyEmail %></td> -->
+                            <!-- <td><%= user.verifyKeyExpire.toLocaleDateString() %> <%= user.verifyKeyExpire.toLocaleTimeString() %></td> -->
+                            <td><%= user.enabled %></td>
+                            <td><%= user.extra %></td>
+                            <td>
+                                <% if (user.admin_id) { %>
+                                <span class="badge badge-success">Yes</span>
+                                <% } else { %>
+                                <span class="badge badge-danger">No</span>
+                                <% } %>
+                            </td>
+
+                            <td><%= user.admin_id %></td>
+
+                            <td>
+                                <% if (user.clients) { %>
+                                    <span>Client</span>
+                                <% } else if (user.consultants) { %>
+                                    <span>Consultant</span>
+                                <% } else if (user.coordinators) { %>
+                                    <span>Coordinator</span>
+                                <% } else if (user.operators) { %>
+                                    <span>Operator</span>
+                                <% } else if (user.technicians) { %>
+                                    <span>Technician</span>
+                                <% } else if (user.interpreters) { %>
+                                    <span>Interpreter</span>
+                                <% } else { %>
+                                    <span>Not defined</span>
+                                <% } %>
+                            </td>
+                            
+                            <td>
+                                <div class="btn-group">
+                                    <a href="/users/<%= user.id %>/edit" class="btn btn-primary btn-manage"><i class="fas fa-edit"></i></a>
+                                    <a href="/users/<%= user.id %>/delete" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+                <!-- BUTTON: new user -->
+                <div class="text-center">
+                    <a href="/users/new" class="btn btn-success"><i class="fa-solid fa-plus"></i>  New User</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<br>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+</body>
+</html>
