--- a/views/users/manageSchedule.ejs
+++ b/views/users/manageSchedule.ejs
@@ -235,7 +235,7 @@
         <!-- Botones -->
         <div class="text-center">
             <button type="submit" class="btn btn-primary">Save Schedule</button>
-            <a href="javascript:history.go(-1)" class="btn btn-secondary">Cancel</a>
+            <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
         </div>
     </div>
 
