--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -7,10 +7,82 @@
     <title>User Details</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            margin-top: 20px;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #4a4a4a;
+            border-radius: 10px;
+        }
+        .details h4 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 10px 20px;
+            border-bottom: 7px solid #5b5b5b;
+            text-align: center;
+        }
+
+        .subtitle h5 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 7px 5px;
+        }
+        .table th{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            width: 22%;
+            vertical-align: middle;
+            border-radius: 5px;
+            border: 3px solid #ffffff;
+            letter-spacing: 0.7px;
+        }
+        .table td {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            letter-spacing: 0.6px;
+            vertical-align: middle;
+            border-radius: 5px;
+            border: 3px solid #ffffff;
+
+
+        }
+        .table tbody tr:nth-of-type(odd) {
+            background-color: #f9f9f9;
+        }
+        .table tbody tr:nth-of-type(even) {
+            background-color: #f9f9f9;
+        }
+        .table tbody tr:hover {
+            background-color: #e9ecef;
+        }
+
+    </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">User Details</h2>
+        <div class=" profile-header">
+            <h2>User Details</h2>
+        </div>
         <table class="table table-bordered mt-4">
             <tr>
                 <th>ID</th>
@@ -91,41 +163,43 @@
         <br>
 
        <!-- Botones en línea -->
-        <div class="d-inline">
+        <div class="text-center">
             <!-- Botón para editar -->
             <form action="/users/<%= user.id %>/edit" method="GET" class="d-inline">
-                <button type="submit" class="btn btn-primary">Edit User</button>
+                <button type="submit" class="btn btn-primary"><i class="fas fa-edit"></i> Edit User</button>
             </form>
 
             <!-- Botón para eliminar -->
             <form action="/users/<%= user.id %>/delete" method="GET" class="d-inline">
-                <button type="submit" class="btn btn-danger">Delete User</button>
+                <button type="submit" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i> Delete User</button>
             </form>
 
             <!-- Botón para volver atrás -->
             <a href="/users" class="btn btn-outline-dark">Back</a>
-
         </div>
+
 
 
     </div>
 
     <!-- Bootstrap JS (opcional, solo si necesitas funcionalidades de Bootstrap) -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Botón mostrar password -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const passwordInput = document.getElementById('password');
+            const passwordToggle = document.getElementById('passwordToggle');
+        
+            passwordToggle.addEventListener('click', function() {
+                const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+                passwordInput.setAttribute('type', type);
+                passwordToggle.classList.toggle('active');
+            });
+        });
+    </script>
+
+<br>
+<br>
 </body>
 </html>
-
-
-<!-- Botón mostrar password -->
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const passwordInput = document.getElementById('password');
-        const passwordToggle = document.getElementById('passwordToggle');
-    
-        passwordToggle.addEventListener('click', function() {
-            const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-            passwordInput.setAttribute('type', type);
-            passwordToggle.classList.toggle('active');
-        });
-    });
-</script>
