--- a/views/users/technicians.ejs
+++ b/views/users/technicians.ejs
@@ -1,46 +1,103 @@
 <!-- views/users/technicians.ejs -->
+<!-- views/users/coordinators.ejs -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Technicians</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-<div class="card">
-    <div class="card-header">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">List of Technicians</h2>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered table-sm">
-                <thead class="thead-dark">
-                    <tr>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
-                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% technicians.forEach(technician => { %>
-                    <tr>
-                        <td><%= technician.id %></td>
-                        <td><a href="/users/<%= technician.id %>" style="color: blue;"><%= technician.User.username %></a></td>
-                        <td><%= technician.User.email %></td>
-                        <td  style="text-align: center;">
-                            <div class="btn-group">
-                                <a href="/users/<%= technician.id %>/edit" class="btn btn-outline-dark btn-sm btn-white mr-1">Edit</a>
-                                <a href="/users/<%= technician.id %>/delete" class="btn btn-outline-dark btn-sm btn-white">Delete</a>
-                            </div>
-                        </td>
-                    </tr>
-                    <% }); %>
-                </tbody>
-            </table>
-            
-            <div>
+    <style>
+        .profile-header h2 {
+            font-family: Georgia, serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 3px;
+            text-align: center;
+        }
 
-                <!-- Botón para crear usuario -->
-                <a href="/users/new" class="btn btn-success">New User</a>
+        .details h4 {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            padding: 10px 10px;
+        }
+        
+        .thead th {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #4a4a4a;
+            color: #fff;
+            vertical-align: middle;
+            text-align: center;
+            padding: 5px;
+            border: none;
+        }
+        .table td {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #4a4a4a;
+            letter-spacing: 0.6px;
+            text-align: center;
+            border-top: 2px solid #eeeeee;
+            border-bottom: 2px solid #eeeeee;
+            border-left: none;
+            border-right: none;
+            vertical-align: middle;
+        }
+        .table {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
 
-                <!-- Botón para volver atrás -->
-                <a href="/users" class="btn btn-outline-dark">Back</a>
+    </style>
 
+</head>
+<body>
+
+    <div class="card">
+        <div class="card-header profile-header">
+            <h2>List of Technicians</h2>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered table-sm">
+                    <thead class="thead">
+                        <tr>
+                            <th>ID</th>
+                            <th>Username</th>
+                            <th>Email</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% technicians.forEach(technician => { %>
+                        <tr>
+                            <td><%= technician.id %></td>
+                            <td><a href="/users/<%= technician.id %>" style="color: blue;"><%= technician.User.username %></a></td>
+                            <td><%= technician.User.email %></td>
+                            <td>
+                                <div>
+                                    <a href="/users/<%= technician.id %>/edit" class="btn btn-primary btn-manage btn-sm"><i class="fas fa-edit"></i></a>
+                                    <a href="/users/<%= technician.id %>/delete" class="btn btn-danger btn-sm"><i class="fa-regular fa-trash-can fa-bounce"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+                
+                <div class="text-center" style="text-align: center;">
+                    <a href="/users/new" class="btn btn-success"><i class="fa-solid fa-plus"></i>  New User</a>
+                    <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</body>
+</html>
